RESOLVED FIXED134747
RemoteInspector::shared() should not call WTF::initializeMainThread()
https://bugs.webkit.org/show_bug.cgi?id=134747
Summary RemoteInspector::shared() should not call WTF::initializeMainThread()
Jon Honeycutt
Reported 2014-07-08 16:15:16 PDT
RemoteInspector::shared() will be called when calling JSGlobalContextCreate(), which should be possible to call from any thread. RemoteInspector::shared() should not call WTF::initializeMainThread(). <rdar://problem/17161482>
Attachments
Patch (1.75 KB, patch)
2014-07-08 16:26 PDT, Jon Honeycutt
joepeck: review+
Jon Honeycutt
Comment 1 2014-07-08 16:26:58 PDT
Joseph Pecoraro
Comment 2 2014-07-08 16:28:33 PDT
Comment on attachment 234606 [details] Patch r=me!
Jon Honeycutt
Comment 3 2014-07-08 16:32:24 PDT
Note You need to log in before you can comment on or make changes to this bug.