RemoteInspector::shared() should not call WTF::initializeMainThread() <https://bugs.webkit.org/show_bug.cgi?id=134747> <rdar://problem/17161482>

Reviewed by Joseph Pecoraro.

* inspector/remote/RemoteInspector.mm:
(Inspector::RemoteInspector::shared):
Don't call WTF::initializeMainThread(). WTF threading is initialized by
JSC::initializeThreading().

Canonical link: https://commits.webkit.org/152693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170903 268f45cc-cd09-0410-ab3c-d52691b4dbfc